<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kazunari.testapp001.CalculatorActivity">

    <TextView
        android:id="@+id/calculator_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:text="@string/calculator_title"
        android:textSize="20sp"
        android:textColor="#000000"
        android:background="@drawable/frame_style"
        />

    <Button
        android:id="@+id/calculator_back"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/calculator_title"
        android:layout_marginLeft="10dp"
        android:text="@string/calculator_back"
        android:background="@drawable/frame_style"
        />

    <TextView
        android:id="@+id/calculator_result"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:gravity="right|center"
        android:layout_below="@id/calculator_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:paddingRight="10dp"
        android:text=""
        android:textSize="20sp"
        android:textColor="#000000"
        android:background="@drawable/frame_style"
        />

    <GridLayout
        android:id="@+id/gridLayout1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/calculator_result"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:columnCount="4"
        android:rowCount="5">

        <Button
            android:id="@+id/calculator_ac"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_ac"
            android:layout_column="0"
            android:layout_row="0"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_plus_minus"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_plus_minus"
            android:layout_column="1"
            android:layout_row="0"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_percent"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_percent"
            android:layout_column="2"
            android:layout_row="0"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_division"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_division"
            android:layout_column="3"
            android:layout_row="0"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_7"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_7"
            android:layout_column="0"
            android:layout_row="1"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_8"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_8"
            android:layout_column="1"
            android:layout_row="1"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_9"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_9"
            android:layout_column="2"
            android:layout_row="1"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_multi"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_plus"
            android:layout_column="3"
            android:layout_row="1"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_4"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_4"
            android:layout_column="0"
            android:layout_row="2"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_5"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_5"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_6"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_6"
            android:layout_column="2"
            android:layout_row="2"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_minus"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_minus"
            android:layout_column="3"
            android:layout_row="2"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_1"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_1"
            android:layout_column="0"
            android:layout_row="3"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_2"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_2"
            android:layout_column="1"
            android:layout_row="3"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_3"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_3"
            android:layout_column="2"
            android:layout_row="3"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_plus"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_plus"
            android:layout_column="3"
            android:layout_row="3"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_0"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="4"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_dot"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_dot"
            android:layout_column="2"
            android:layout_row="4"
            android:background="@drawable/frame_style"
            />
        <Button
            android:id="@+id/calculator_equal"
            android:layout_width="@dimen/calculator_width"
            android:layout_height="@dimen/calculator_height"
            android:text="@string/calculator_equal"
            android:layout_column="3"
            android:layout_row="4"
            android:background="@drawable/frame_style"
            />
    </GridLayout>
</RelativeLayout>
